feat: add Docker support with multi-stage builds; implement runtime type handling and CLI enhancements for benchmark profiles