@@ -290,6 +290,152 @@ class ExcelExporterTest {
         }
     }
 
+    // ======================== Aggregation (Fix 4) ========================
+
+    @Test
+    void writeExcel_latenzenAggregatesRepetitions() throws IOException {
+        Path xlsx = tempDir.resolve("test-agg.xlsx");
+        // Two repetitions of "baseline" + one "alt" → should produce 2 rows (not 3)
+        ExcelExporter.writeExcel(List.of(
+                createSampleResult("baseline"),
+                createSampleResult("baseline"),
+                createMinimalResult("alt")
+        ), xlsx);
+
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Latenzen");
+            // Row 0 = header, Rows 1..2 = data (2 configs, not 3 results)
+            assertEquals(2, sheet.getLastRowNum());
+            assertEquals("baseline", sheet.getRow(1).getCell(0).getStringCellValue());
+            assertEquals("alt", sheet.getRow(2).getCell(0).getStringCellValue());
+        }
+    }
+
+    @Test
+    void writeExcel_startupAggregatesRepetitions() throws IOException {
+        Path xlsx = tempDir.resolve("test-agg2.xlsx");
+        ExcelExporter.writeExcel(List.of(
+                createSampleResult("baseline"),
+                createSampleResult("baseline"),
+                createMinimalResult("alt")
+        ), xlsx);
+
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Startup & Throughput");
+            assertEquals(2, sheet.getLastRowNum());
+        }
+    }
+
+    @Test
+    void writeExcel_ressourcenAggregatesRepetitions() throws IOException {
+        Path xlsx = tempDir.resolve("test-agg3.xlsx");
+        ExcelExporter.writeExcel(List.of(
+                createSampleResult("baseline"),
+                createSampleResult("baseline"),
+                createMinimalResult("alt")
+        ), xlsx);
+
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Ressourcen");
+            assertEquals(2, sheet.getLastRowNum());
+        }
+    }
+
+    @Test
+    void writeExcel_gcVerhaltenAggregatesRepetitions() throws IOException {
+        Path xlsx = tempDir.resolve("test-agg4.xlsx");
+        ExcelExporter.writeExcel(List.of(
+                createSampleResult("baseline"),
+                createSampleResult("baseline"),
+                createMinimalResult("alt")
+        ), xlsx);
+
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("GC-Verhalten");
+            assertEquals(2, sheet.getLastRowNum());
+        }
+    }
+
+    @Test
+    void writeExcel_rohdatenKeepsAllRows() throws IOException {
+        Path xlsx = tempDir.resolve("test-agg5.xlsx");
+        // 2x baseline (10 latencies each) + 1x alt (2 latencies) = 22 raw rows
+        ExcelExporter.writeExcel(List.of(
+                createSampleResult("baseline"),
+                createSampleResult("baseline"),
+                createMinimalResult("alt")
+        ), xlsx);
+
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Rohdaten");
+            assertEquals(22, sheet.getLastRowNum());
+        }
+    }
+
+    @Test
+    void writeExcel_uebersichtKeepsAllRows() throws IOException {
+        Path xlsx = tempDir.resolve("test-agg6.xlsx");
+        // Uebersicht should NOT aggregate – it shows raw per-repetition data
+        ExcelExporter.writeExcel(List.of(
+                createSampleResult("baseline"),
+                createSampleResult("baseline"),
+                createMinimalResult("alt")
+        ), xlsx);
+
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Übersicht");
+            // Row 0 = section headers, Row 1 = column headers, Rows 2..4 = data (3 results)
+            assertEquals(4, sheet.getLastRowNum());
+        }
+    }
+
+    @Test
+    void mergeFromCsvDirectory_latencyChartAggregatesByConfig() throws IOException {
+        Path csvDir = tempDir.resolve("csvs-lat-agg");
+        Files.createDirectory(csvDir);
+        // Two CSVs for "baseline" → should produce 1 aggregated row, + 1 for "zgc"
+        writeSampleCsv(csvDir.resolve("results-2026-03-01T10-00-00.000Z.csv"), "baseline", "");
+        writeSampleCsv(csvDir.resolve("results-2026-03-02T10-00-00.000Z.csv"), "baseline", "");
+        writeSampleCsv(csvDir.resolve("results-2026-03-03T10-00-00.000Z.csv"), "zgc", "-XX:+UseZGC");
+
+        Path excelOut = tempDir.resolve("merged-lat-agg.xlsx");
+        ExcelExporter.mergeFromCsvDirectory(csvDir, excelOut);
+
+        try (InputStream is = Files.newInputStream(excelOut);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Latenzen (alle Runs)");
+            // 2 config groups, not 3 raw rows
+            assertEquals(2, sheet.getLastRowNum());
+            assertEquals("baseline", sheet.getRow(1).getCell(0).getStringCellValue());
+            assertEquals("zgc", sheet.getRow(2).getCell(0).getStringCellValue());
+        }
+    }
+
+    @Test
+    void mergeFromCsvDirectory_overviewKeepsAllRows() throws IOException {
+        Path csvDir = tempDir.resolve("csvs-ov-all");
+        Files.createDirectory(csvDir);
+        writeSampleCsv(csvDir.resolve("results-2026-03-01T10-00-00.000Z.csv"), "baseline", "");
+        writeSampleCsv(csvDir.resolve("results-2026-03-02T10-00-00.000Z.csv"), "baseline", "");
+        writeSampleCsv(csvDir.resolve("results-2026-03-03T10-00-00.000Z.csv"), "zgc", "-XX:+UseZGC");
+
+        Path excelOut = tempDir.resolve("merged-ov-all.xlsx");
+        ExcelExporter.mergeFromCsvDirectory(csvDir, excelOut);
+
+        try (InputStream is = Files.newInputStream(excelOut);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            XSSFSheet sheet = wb.getSheet("Übersicht (alle Runs)");
+            // Overview keeps all 3 raw rows
+            assertEquals(3, sheet.getLastRowNum());
+        }
+    }
+
     // ======================== parseCsv ========================
 
     @Test
@@ -503,6 +649,146 @@ class ExcelExporterTest {
             // All relative values for baseline should be 100%
             // col 3 = first rel. column (Readiness rel.)
             assertEquals(100.0, sheet.getRow(1).getCell(3).getNumericCellValue(), 0.01);
+        }
+    }
+
+    // ======================== inferRuntimeType ========================
+
+    @Test
+    void inferRuntimeType_hotspotDefault() {
+        assertEquals(RuntimeType.HOTSPOT, ExcelExporter.inferRuntimeType("tfl4-ek-bench:jvm"));
+    }
+
+    @Test
+    void inferRuntimeType_openj9() {
+        assertEquals(RuntimeType.OPENJ9, ExcelExporter.inferRuntimeType("tfl4-ek-bench:openj9"));
+    }
+
+    @Test
+    void inferRuntimeType_semeru() {
+        assertEquals(RuntimeType.OPENJ9, ExcelExporter.inferRuntimeType("ibm-semeru-runtimes:25-jre"));
+    }
+
+    @Test
+    void inferRuntimeType_native() {
+        assertEquals(RuntimeType.NATIVE, ExcelExporter.inferRuntimeType("tfl4-ek-bench:native"));
+    }
+
+    @Test
+    void inferRuntimeType_graalvmNative() {
+        assertEquals(RuntimeType.NATIVE, ExcelExporter.inferRuntimeType("ghcr.io/graalvm/graalvm-native:latest"));
+    }
+
+    @Test
+    void inferRuntimeType_null() {
+        assertEquals(RuntimeType.HOTSPOT, ExcelExporter.inferRuntimeType(null));
+    }
+
+    @Test
+    void inferRuntimeType_caseInsensitive() {
+        assertEquals(RuntimeType.OPENJ9, ExcelExporter.inferRuntimeType("IMG:OPENJ9-EK"));
+        assertEquals(RuntimeType.NATIVE, ExcelExporter.inferRuntimeType("IMG:NATIVE-EK"));
+    }
+
+    // ======================== Runtime Color-Coding (end-to-end) ========================
+
+    private RunResult createResultWithImage(String name, String dockerImage) {
+        return new RunResult(
+                name,
+                dockerImage,
+                1200L,
+                0.25,
+                List.of(0.010, 0.012, 0.015, 0.011, 0.020, 0.013, 0.014, 0.016, 0.018, 0.022),
+                1.5,
+                66.67,
+                "-XX:-UseCompressedOops",
+                ReadinessCheckUsed.ACTUATOR_READINESS,
+                null,
+                BenchmarkScenario.PAYLOAD_HEAVY_JSON,
+                200000,
+                "/json?n=200000",
+                MeasurementProfile.defaults(),
+                List.of(DockerStatSample.parse("0.12%|151.9MiB / 768MiB|19.78%|4.9kB / 2.93kB|40.9MB / 0B|29")),
+                List.of(DockerStatSample.parse("45.5%|280MiB / 768MiB|36.46%|10kB / 5kB|50MB / 1MB|35")),
+                List.of(DockerStatSample.parse("2.1%|200MiB / 768MiB|26.04%|12kB / 6kB|55MB / 2MB|30")),
+                1,
+                null,
+                null
+        );
+    }
+
+    @Test
+    void writeExcel_multiRuntime_noException() throws IOException {
+        // Three configs with different runtimes should trigger runtime coloring
+        Path xlsx = tempDir.resolve("test-multiruntime.xlsx");
+        ExcelExporter.writeExcel(List.of(
+                createResultWithImage("P01-hotspot", "tfl4-ek-bench:jvm"),
+                createResultWithImage("P04-openj9", "tfl4-ek-bench:openj9"),
+                createResultWithImage("P05-native", "tfl4-ek-bench:native")
+        ), xlsx);
+
+        assertTrue(Files.exists(xlsx));
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            assertEquals(7, wb.getNumberOfSheets());
+            // Verify aggregated chart data rows exist
+            XSSFSheet latenzen = wb.getSheet("Latenzen");
+            assertEquals(3, latenzen.getLastRowNum()); // 3 configs
+        }
+    }
+
+    @Test
+    void writeExcel_singleRuntime_noColoringNoException() throws IOException {
+        // All same runtime — applyRuntimeColors should be a no-op (distinct count <= 1)
+        Path xlsx = tempDir.resolve("test-singleruntime.xlsx");
+        ExcelExporter.writeExcel(List.of(
+                createResultWithImage("baseline", "tfl4-ek-bench:jvm"),
+                createResultWithImage("tuned", "tfl4-ek-bench:jvm")
+        ), xlsx);
+
+        assertTrue(Files.exists(xlsx));
+        try (InputStream is = Files.newInputStream(xlsx);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            assertEquals(7, wb.getNumberOfSheets());
+        }
+    }
+
+    private void writeSampleCsvWithImage(Path file, String configName, String dockerImage, String jvmFlags)
+            throws IOException {
+        String header = "scenario,workloadN,workloadPath,configName,dockerImage,effectiveJavaToolOptions,"
+                + "readinessCheckUsed,readinessMs,firstSeconds,latencyCount,latencyMean,latencyP50,"
+                + "latencyP95,latencyP99,totalMeasureTimeSeconds,throughputReqPerSec,"
+                + "warmupRequests,measureRequests,concurrency,sleepBetweenRequestsMs,"
+                + "cpuLoadAvg,memLoadAvg,memLoadMax,"
+                + "gcCount,gcFullCount,gcTotalPauseMs,gcMaxPauseMs,gcOverheadPercent,gcPeakHeapAfterMb,"
+                + "repetition";
+        String dataRow = "PAYLOAD_HEAVY_JSON,200000,/json?n=200000," + configName + "," + dockerImage + ","
+                + jvmFlags + ",ACTUATOR_READINESS,1200,0.25,10,0.015,0.012,0.020,0.022,1.5,66.67,20,100,1,0,"
+                + "42.5,35.2,38.1,120,2,1658.3,45.7,1.85,256.0,1";
+        Files.writeString(file, header + "\n" + dataRow + "\n", StandardCharsets.UTF_8);
+    }
+
+    @Test
+    void mergeFromCsvDirectory_multiRuntime_noException() throws IOException {
+        Path csvDir = tempDir.resolve("csvs-multirt");
+        Files.createDirectory(csvDir);
+        writeSampleCsvWithImage(csvDir.resolve("results-2026-03-01T10-00-00.000Z.csv"),
+                "P01-hotspot", "tfl4-ek-bench:jvm", "");
+        writeSampleCsvWithImage(csvDir.resolve("results-2026-03-02T10-00-00.000Z.csv"),
+                "P04-openj9", "tfl4-ek-bench:openj9", "");
+        writeSampleCsvWithImage(csvDir.resolve("results-2026-03-03T10-00-00.000Z.csv"),
+                "P05-native", "tfl4-ek-bench:native", "");
+
+        Path excelOut = tempDir.resolve("merged-multirt.xlsx");
+        ExcelExporter.mergeFromCsvDirectory(csvDir, excelOut);
+
+        assertTrue(Files.exists(excelOut));
+        try (InputStream is = Files.newInputStream(excelOut);
+             XSSFWorkbook wb = new XSSFWorkbook(is)) {
+            assertEquals(6, wb.getNumberOfSheets());
+            // Verify chart sheets have 3 aggregated rows
+            XSSFSheet latenzen = wb.getSheet("Latenzen (alle Runs)");
+            assertEquals(3, latenzen.getLastRowNum());
         }
     }
 }
